# discord-hsreplaynet

./: README.md  config_example.json  pyproject.toml
discord_hsreplaynet/: bot.py
